<resources>
    <string name="app_name">IDO demo</string>
    <string name="device_connect">Connect Device</string>
    <string name="disconnect">Disconnect Device</string>
    <string name="device_bind">Bind Device</string>
    <string name="device_unbind">Unbind Device</string>
    <string name="connect_state_start">Starting Connection</string>
    <string name="connect_state_ing">Connecting...</string>
    <string name="connect_state_failed">Connect failed</string>
    <string name="get_function">Get Function</string>
    <string name="getdeviceinfo">getDeviceInfo</string>
    <string name="get_device_information">Get Device Information</string>
    <string name="getfunctiontable">getFunctionTable</string>
    <string name="getsn">getSn</string>
    <string name="get_sn_information">Get SN information</string>
    <string name="getmenulist">getMenuList</string>
    <string name="get_supported_menu_list">Get Supported Menu List</string>
    <string name="getnoticestatus">getNoticeStatus</string>
    <string name="get_notification_center_status_event_number">Get notification center status event number</string>
    <string name="getmainsportgoal">getMainSportGoal</string>
    <string name="getwatchdiallinfo">getWatchDiallinfo</string>
    <string name="get_screen_information">Get Screen Information</string>
    <string name="set_function">Set Function</string>
    <string name="setdatetime">setDateTime</string>
    <string name="set_time">Set Time</string>
    <string name="parameter">Parameter</string>
    <string name="parameter_et">Enter Parameters</string>
    <string name="send">Send</string>
    <string name="response">Response</string>
    <string name="start_sync_data">Start Sync Data</string>
    <string name="stop_sync_data">Stop Sync Data</string>
    <string name="progress">Progress :</string>
    <string name="sync_data">Sync Data</string>
    <string name="sdk_feature_test">SDK Feature Test</string>
    <string name="sdk_feature_refresh">Refresh</string>
    <string name="sdk_feature_clear">Clear</string>
    <string name="transfer_file">Transfer File</string>
    <string name="stop">Stop</string>
    <string name="setblevoice">setBleVoice</string>
    <string name="set_phone_volume_for_device_event_number">Set phone volume for device event number</string>
    <string name="function">Function</string>
    <string name="alexa">Alexa</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="alexa_dialog_title">Message</string>
    <string name="alexa_dialog_msg">Your pairing code is %s. The Alexa sign-in page will open. Do you want to continue?</string>
    <string name="alexa_dialog_copy">Copy and continue</string>
    <string name="alexa_dialog_cancel">Cancel</string>
    <string name="set_send_run_plan">Send Running Plan</string>
    <string name="set_dial_order">Set Watch Face Order</string>
    <string name="set_walk_remiders_time">Set Multiple Walk Reminder Times</string>
    <string name="set_weather_v3">Send V3 Weather Data</string>
    <string name="v3_set_message_notification_status">V3 Set Message Notification Status</string>
    <string name="v3_get_message_notification_status">V3 Get Message Notification Status</string>
    <string name="v3_updata_message_notification_status">V3 Update Message Notification Status</string>
    <string name="menu_log_export">Export Log</string>
    <string name="menu_log_app">App Log</string>
    <string name="menu_log_ble">BLE Log</string>
    <string name="sport">Sport</string>
    <string name="sport_start">Start Sport</string>
    <string name="sport_pause">Pause Sport</string>
    <string name="sport_resume">Resume Sport</string>
    <string name="sport_end">End Sport</string>
    <string name="setmainuisortv3">Set Main UI Control Order</string>
    <string name="setwatchfacedata">Set Watch Face Data</string>
    <string name="setmusicoperate">Manage Songs or Folders</string>
    <string name="setnotificationstatus">Configure App Notification Status</string>
    <string name="setfitnessguidance">Fitness Guidance</string>
    <string name="setscientificsleepswitch">Set Scientific Sleep Switch</string>
    <string name="settemperatureswitch">Set Night Temperature Switch</string>
    <string name="setv3noise">Set Ambient Noise Thresholds</string>
    <string name="setheartmode">Set Heart Rate Mode</string>
    <string name="setheartratemodesmart">Set Smart Heart Rate Mode</string>
    <string name="settakingmedicinereminder">Set Medication Reminder</string>
    <string name="setblevoiceble">Sync Phone Volume to BLE Device</string>
    <string name="setlongsit">Set Sedentary Reminder</string>
    <string name="setlostfind">Set Anti-Loss Feature</string>
    <string name="setsportgoal">Set Activity Goals</string>
    <string name="setunit">Set Units</string>
    <string name="setuphandgesture">Set Raise-to-Wake Gesture</string>
    <string name="setmusiconoff">Music Switch</string>
    <string name="setdisplaymode">Display Mode</string>
    <string name="setsportmodeselect">Set Sport Mode Selection</string>
    <string name="setsleepperiod">Set Sleep Schedule</string>
    <string name="setweatherdata">Set Weather Data</string>
    <string name="setweathersuntime">Set Sunrise and Sunset Times</string>
    <string name="setwatchdial">Set Watch Face</string>
    <string name="setshortcut">Set Shortcut</string>
    <string name="setbpcalibration">Blood Pressure Calibration</string>
    <string name="setbpmeasurement">Blood Pressure Measurement</string>
    <string name="setstresscalibration">Stress Calibration</string>
    <string name="getapplet">Get Applet</string>
    <string name="setapplet">Set Applet</string>
    <string name="setgpscontrol">Control GPS</string>
    <string name="setspo2switch">Set SpO2 Switch</string>
    <string name="sethandwashingreminder">Set Handwashing Reminder</string>
    <string name="setnoticeappname">V3 Dynamic Message Notification</string>
    <string name="setsynccontact">Synchronize frequently used contacts</string>
    <string name="musiccontrol">Control Music via V3 Protocol</string>
    <string name="noticemessagev3">Message Notification Reminder via V3 Protocol</string>
    <string name="setbpcalcontrolv3">V3 blood pressure calibration control</string>
    <string name="setbasesportparamsortv3">V3 Set Activity Subitem Data Order</string>
    <string name="setschedulerreminderv3">V3 Set Schedule Reminder</string>
    <string name="set100sportsortv3">V3 Set 100 Sport Order</string>
    <string name="setwallpaperdialreplyv3">V3 Set Photo Watch Face</string>
    <string name="setvoicereplytxtv3">V3 Voice Reply Text</string>
    <string name="settime">Set Time</string>
    <string name="setfindphone">Set Find Phone</string>
    <string name="setonekeysos">Set One-Tap SOS Call</string>
    <string name="setweatherswitch">Set weather switch</string>
    <string name="setunreadappreminder">GT01 Pro Unread Message Red Dot Switch</string>
    <string name="setweathercityname">Set Weather City Name</string>
    <string name="setsportmodesort">Set Sport Mode Order</string>
    <string name="setrrespirateturn">Set Respiratory Rate Switch</string>
    <string name="setbodypowerturn">Set Body Energy Switch</string>
    <string name="setworldtimev3">Send V3 World Time</string>
    <string name="getsninfo">Get SN</string>
    <string name="getbtname">Get BT Bluetooth Name</string>
    <string name="getlivedata">Get Real-Time Data</string>
    <string name="gethidinfo">Get HID Information</string>
    <string name="getgpsinfo">Obtain GPS information</string>
    <string name="getgpsstatus">Obtain GPS status</string>
    <string name="gethotstartparam">Obtain hot start parameters</string>
    <string name="getversioninfo">Obtain version information</string>
    <string name="getmtuinfo">Get MTU Information</string>
    <string name="getAlgFileInfo">Get firmware algorithm file information (ACC/GPS)</string>
    <string name="requestAlgFile">Request firmware algorithm file information (ACC/GPS)</string>
    <string name="getnotdisturbstatus">Obtain Do Not Disturb Mode Status</string>
    <string name="getdownlanguage">Get download language support</string>
    <string name="geterrorrecord">Get error records</string>
    <string name="getmainsportgoalordistance">Get Main Activity Goal Settings</string>
    <string name="getwalkremind">Get Walk Reminder</string>
    <string name="getbatteryinfo">Obtain battery information</string>
    <string name="getflashbininfo">Obtain font information</string>
    <string name="getsupportedlist">Obtain menu list</string>
    <string name="getscreenbrightness">Obtain screen brightness</string>
    <string name="getuphandgesture">Obtain wrist lift data</string>
    <string name="getupdatestatus">Obtain device upgrade status</string>
    <string name="getwatchdialid">Obtain dial ID</string>
    <string name="getwatchdialinfo">Obtain screen information</string>
    <string name="getdevicename">Get Watch Name</string>
    <string name="app_nt_sendMsg">Simulate sending dynamic messages</string>
    <string name="app_nt_sendMsg_q">Simulate sending dynamic messages (quick reply)</string>
    <string name="app_nt_allow">Allow notifications</string>
    <string name="app_nt_silent">Silent Notifications</string>
    <string name="app_nt_clos">Disable Notifications</string>
    <string name="app_nt_clos_back">Close</string>
    <string name="sport_edit_save">Save</string>
    <string name="sport_edit_restore">Restore default data</string>
    <string name="sport_edit_move_up">Move up</string>
    <string name="sport_edit_move_down">Move down</string>
    <string name="sport_edit_new_screen">Add Screen</string>
    <string name="sport_edit_delete_screen">Delete Screen</string>
    <string name="start_measure">Start Measure</string>
    <string name="stop_measure">Stop Measure</string>
    <string name="get_measure_data">Get Measure Data</string>
    <string name="gesture_control_title">Gesture Control (15.82)</string>
    <string name="gesture_control_status_idle">Status: idle</string>
    <string name="gesture_control_flow_hint">Flow: support(03) → current(02) → set(01)</string>
    <string name="gesture_control_master_switch">Gesture master switch</string>
    <string name="gesture_control_tree_title">Function / sub-function / gesture (from operate=3)</string>
    <string name="gesture_control_help">Enter page: 03 builds tree → 02 applies state. One function ON at a time; gestures exclusive within a function. Tap set for 01.</string>
    <string name="gesture_control_btn_support">Get support(03)</string>
    <string name="gesture_control_btn_get">Get current(02)</string>
    <string name="gesture_control_btn_set">Set gesture(01)</string>
    <string name="gesture_control_btn_refresh">Reload(03→02)</string>
    <string name="gesture_control_btn_clear">Clear display</string>
    <string name="gesture_control_last_json">Latest callback JSON</string>
    <string name="gesture_control_empty">(empty)</string>
    <string name="gesture_control_btn_call_notice">Call notice (CallNotice)</string>
    <string name="call_notice_title">Call Notice</string>
    <string name="call_notice_help">Use with Gesture Control to test answer/reject/hang-up gestures.</string>
    <string name="call_notice_hint_contact">Contact</string>
    <string name="call_notice_hint_phone">Phone</string>
    <string name="call_notice_default_contact">Demo User</string>
    <string name="call_notice_default_phone">13800138000</string>
    <string name="call_notice_btn_incoming">Incoming call</string>
    <string name="call_notice_btn_answered">Answered</string>
    <string name="call_notice_btn_rejected">Rejected / missed</string>
    <string name="call_notice_btn_hang_up">Hang up in call</string>
    <string name="call_notice_log_title">Log</string>
    <string name="call_notice_log_empty">(empty)</string>
</resources>