<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/send_btn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_send"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/parameter"
        android:textColor="@color/color_808080" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/color_808080">

        <TextView
            android:id="@+id/paramter_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/parameter_et"
        android:textColor="@color/color_808080" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fillViewport="true"
        android:background="@color/color_808080">

        <EditText
            android:id="@+id/paramter_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_808080"
             />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/response"
        android:textColor="@color/color_808080" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="@color/color_808080">

        <TextView
            android:id="@+id/tv_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="successfull" />
    </ScrollView>


</LinearLayout>